--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,27 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer{
+	display: flex;
+	gap: 20px;
+
+	margin-top: 10px;
+
+	font-weight: 600;
+}
+
+.field{
+	display: inline-flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.value{
+	font-size: 30px;
+}
+
+.label{
+	font-size: 14px;
+	line-height: 1.5;
+}
