--- a/src/css/common.css
+++ b/src/css/common.css
@@ -17,26 +17,35 @@ img {
   max-width: 100%;
 }
 
-.timer{
-	display: flex;
-	gap: 20px;
+.timer {
+  display: flex;
+  gap: 20px;
 
-	margin-top: 10px;
+  margin-top: 10px;
 
-	font-weight: 600;
+  font-weight: 600;
 }
 
-.field{
-	display: inline-flex;
-	flex-direction: column;
-	align-items: center;
+.field {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.value{
-	font-size: 30px;
+.value {
+  font-size: 30px;
 }
 
-.label{
-	font-size: 14px;
-	line-height: 1.5;
+.label {
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+.btn {
+  padding: 5px 10px;
+  margin-top: 10px;
+
+  border-radius: 5px;
+
+  cursor: pointer;
 }
